updating notebooks with XAI and schema change for v1, v2

--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
@@ -456,7 +456,7 @@
     "}\n",
     "\n",
     "tuning_settings = {\n",
-    "    \"iterations\": 10,\n",
+    "    \"iterations\": 1,\n",
     "    \"max_concurrent_iterations\": 2,\n",
     "    \"hyperparameter_sampling\": RandomParameterSampling(parameter_space),\n",
     "    \"early_termination_policy\": BanditPolicy(\n",
@@ -647,6 +647,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import base64\n",
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "def img_to_base64(img_path):\n",
+    "    \"\"\"Load and convert pillow image to base64-encoded image\"\"\"\n",
+    "\n",
+    "    img = Image.open(img_path)\n",
+    "    imgio = BytesIO()\n",
+    "    img.save(imgio, img.format)\n",
+    "    img_str = base64.b64encode(imgio.getvalue())\n",
+    "    return img_str.decode('utf-8')\n",
+    "\n",
+    "\n",
+    "def base64_to_img(base64ImgString):\n",
+    "    base64Img = base64ImgString.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64Img)\n",
+    "    return BytesIO(decoded_img).getvalue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import requests\n",
     "\n",
     "# URL for the web service\n",
@@ -655,20 +682,83 @@
     "# If the service is authenticated, set the key or token\n",
     "key, _ = aks_service.get_keys()\n",
     "\n",
-    "sample_image = \"./test_image.jpg\"\n",
-    "\n",
-    "# Load image data\n",
-    "data = open(sample_image, \"rb\").read()\n",
-    "\n",
     "# Set the content type\n",
     "headers = {\"Content-Type\": \"application/octet-stream\"}\n",
     "\n",
     "# If authentication is enabled, set the authorization header\n",
-    "headers[\"Authorization\"] = f\"Bearer {key}\"\n",
+    "headers[\"Authorization\"] = f\"Bearer {key}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scoring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inference on single image in bytes format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "sample_image = \"./test_image_1.jpg\"\n",
+    "# Load image data\n",
+    "data = open(sample_image, \"rb\").read()\n",
     "\n",
     "# Make the request and display the response\n",
     "resp = requests.post(scoring_uri, data, headers=headers)\n",
-    "print(resp.text)"
+    "predictions = json.loads(resp.text)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inference on single image in base64 format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_image = \"./test_image_1.jpg\"\n",
+    "json_data = json.dumps({'image': img_to_base64(sample_image)})\n",
+    "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
+    "predictions = json.loads(resp.text)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inference on multiple images in base64 format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
+    "json_data = json.dumps({'image': [img_to_base64(img_path) for img_path in sample_images]})\n",
+    "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
+    "predictions = json.loads(\"[{}]\".format(resp.text.replace('}{', '},{')))\n",
+    "predictions"
    ]
   },
   {
@@ -682,7 +772,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -694,7 +786,7 @@
     "\n",
     "IMAGE_SIZE = (18, 12)\n",
     "plt.figure(figsize=IMAGE_SIZE)\n",
-    "img_np = mpimg.imread(sample_image)\n",
+    "img_np = mpimg.imread(sample_images[0])\n",
     "img = Image.fromarray(img_np.astype(\"uint8\"), \"RGB\")\n",
     "x, y = img.size\n",
     "\n",
@@ -702,7 +794,7 @@
     "# Display the image\n",
     "ax.imshow(img_np)\n",
     "\n",
-    "prediction = json.loads(resp.text)\n",
+    "prediction = predictions[0]\n",
     "label_index = np.argmax(prediction[\"probs\"])\n",
     "label = prediction[\"labels\"][label_index]\n",
     "conf_score = prediction[\"probs\"][label_index]\n",
@@ -715,13 +807,102 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate Explanations\n",
+    "- Explainability methods:\n",
+    "   - xrai\n",
+    "   - integratedgradients\n",
+    "   - guidedgradcam\n",
+    "   - guidedbackprop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate explanations for one input image in base64 format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "sample_image = \"./test_image_1.jpg\"\n",
+    "\n",
+    "# Define explainability (XAI) parameters\n",
+    "xai_parameters = {'xai_algorithm': 'guidedbackprop', 'visualizations': True, 'attributions': False}\n",
+    "\n",
+    "json_data = json.dumps({'image': img_to_base64(sample_image),\n",
+    "                        'model_explainability': True,\n",
+    "                        'xai_parameters': xai_parameters})\n",
+    "\n",
+    "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
+    "predictions = json.loads(resp.text)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate explanations for multiple images in base64 format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
+    "\n",
+    "# Define explainability (XAI) parameters\n",
+    "xai_parameters = {'xai_algorithm': 'guidedbackprop', 'visualizations': True, 'attributions': False}\n",
+    "\n",
+    "json_data = json.dumps({'image':[img_to_base64(img_path) for img_path in sample_images],\n",
+    "                        'model_explainability': True,\n",
+    "                        'xai_parameters': xai_parameters\n",
+    "                       })\n",
+    "\n",
+    "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
+    "predictions = json.loads(\"[{}]\".format(resp.text.replace('}{', '},{')))\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize Explanations\n",
+    "Now that we have generated explanations on a test image, we can visualize the explanations for this image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualize explanations of the first image for the class with highest confidence score\n",
+    "img = base64_to_img(predictions[0]['visualizations'])\n",
+    "image = Image.open(BytesIO(img))\n",
+    "image.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8 - AzureML",
+   "display_name": "Python [conda env:xaibenchmarks] *",
    "language": "python",
-   "name": "python38-azureml"
+   "name": "conda-env-xaibenchmarks-py"
   },
   "language_info": {
    "codemirror_mode": {
