--- a/python-sdk/tutorials/automl-with-azureml/image-instance-segmentation/auto-ml-image-instance-segmentation.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-instance-segmentation/auto-ml-image-instance-segmentation.ipynb
@@ -435,7 +435,7 @@
     "}\n",
     "\n",
     "tuning_settings = {\n",
-    "    \"iterations\": 10,\n",
+    "    \"iterations\": 1,\n",
     "    \"max_concurrent_iterations\": 2,\n",
     "    \"hyperparameter_sampling\": RandomParameterSampling(parameter_space),\n",
     "    \"early_termination_policy\": BanditPolicy(\n",
@@ -464,7 +464,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "automl_image_run.wait_for_completion(wait_post_processing=True)"
@@ -626,7 +628,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import base64\n",
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "def img_to_base64(img_path):\n",
+    "    \"\"\"Load and convert pillow image to base64-encoded image\"\"\"\n",
+    "\n",
+    "    img = Image.open(img_path)\n",
+    "    imgio = BytesIO()\n",
+    "    img.save(imgio, img.format)\n",
+    "    img_str = base64.b64encode(imgio.getvalue())\n",
+    "    return img_str.decode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "import requests\n",
+    "import json\n",
     "\n",
     "# URL for the web service\n",
     "scoring_uri = aks_service.scoring_uri\n",
@@ -634,20 +660,76 @@
     "# If the service is authenticated, set the key or token\n",
     "key, _ = aks_service.get_keys()\n",
     "\n",
-    "sample_image = \"./test_image.jpg\"\n",
-    "\n",
-    "# Load image data\n",
-    "data = open(sample_image, \"rb\").read()\n",
-    "\n",
     "# Set the content type\n",
     "headers = {\"Content-Type\": \"application/octet-stream\"}\n",
     "\n",
     "# If authentication is enabled, set the authorization header\n",
-    "headers[\"Authorization\"] = f\"Bearer {key}\"\n",
+    "headers[\"Authorization\"] = f\"Bearer {key}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference on single image in bytes format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "sample_image = \"./test_image_1.jpg\"\n",
+    "\n",
+    "# Load image data\n",
+    "data = open(sample_image, \"rb\").read()\n",
     "\n",
     "# Make the request and display the response\n",
     "resp = requests.post(scoring_uri, data, headers=headers)\n",
     "print(resp.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference on single image in base64 format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_image = \"./test_image_1.jpg\"\n",
+    "json_data = json.dumps({'image': img_to_base64(sample_image)})\n",
+    "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
+    "predictions = json.loads(resp.text)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference on multiple images in base64 format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
+    "json_data = json.dumps({'image': [img_to_base64(img_path) for img_path in sample_images]})\n",
+    "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
+    "predictions = json.loads(\"[{}]\".format(resp.text.replace('}{', '},{')))\n",
+    "predictions"
    ]
   },
   {
@@ -675,7 +757,7 @@
     "\n",
     "IMAGE_SIZE = (18, 12)\n",
     "plt.figure(figsize=IMAGE_SIZE)\n",
-    "img_np = mpimg.imread(sample_image)\n",
+    "img_np = mpimg.imread(sample_images[0])\n",
     "img = Image.fromarray(img_np.astype(\"uint8\"), \"RGB\")\n",
     "x, y = img.size\n",
     "\n",
@@ -684,7 +766,7 @@
     "ax.imshow(img_np)\n",
     "\n",
     "# draw box and label for each detection\n",
-    "detections = json.loads(resp.text)\n",
+    "detections = predictions[0]\n",
     "for detect in detections[\"boxes\"]:\n",
     "    label = detect[\"label\"]\n",
     "    box = detect[\"box\"]\n",
@@ -744,9 +826,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8 - AzureML",
+   "display_name": "Python [conda env:xaibenchmarks] *",
    "language": "python",
-   "name": "python38-azureml"
+   "name": "conda-env-xaibenchmarks-py"
   },
   "language_info": {
    "codemirror_mode": {
