--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
@@ -566,7 +566,7 @@
     ")\n",
     "\n",
     "image_classification_job.set_sweep(\n",
-    "    max_trials=10,\n",
+    "    max_trials=1,\n",
     "    max_concurrent_trials=2,\n",
     "    sampling_algorithm=\"Random\",\n",
     "    early_termination=BanditPolicy(\n",
@@ -943,12 +943,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from azure.ai.ml.entities import OnlineRequestSettings\n",
+    "req_timeout = OnlineRequestSettings(request_timeout_ms=90000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "deployment = ManagedOnlineDeployment(\n",
     "    name=\"ic-mc-fridge-items-mlflow-deploy\",\n",
     "    endpoint_name=online_endpoint_name,\n",
     "    model=registered_model.id,\n",
     "    instance_type=\"Standard_DS3_V2\",\n",
     "    instance_count=1,\n",
+    "    request_settings=req_timeout,\n",
     "    liveness_probe=ProbeSettings(\n",
     "        failure_threshold=30,\n",
     "        success_threshold=1,\n",
@@ -1010,6 +1021,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Online Inference"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1018,8 +1036,7 @@
     "# Create request json\n",
     "import base64\n",
     "\n",
-    "sample_image = \"./data/fridgeObjects/milk_bottle/99.jpg\"\n",
-    "\n",
+    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
     "\n",
     "def read_image(image_path):\n",
     "    with open(image_path, \"rb\") as f:\n",
@@ -1028,8 +1045,8 @@
     "\n",
     "request_json = {\n",
     "    \"input_data\": {\n",
-    "        \"columns\": [\"image\"],\n",
-    "        \"data\": [base64.encodebytes(read_image(sample_image)).decode(\"utf-8\")],\n",
+    "        \"columns\": [\"image_details\"],\n",
+    "        \"data\": [[{'image': base64.encodebytes(read_image(img_path)).decode(\"utf-8\")}] for img_path in sample_images],\n",
     "    }\n",
     "}"
    ]
@@ -1058,21 +1075,25 @@
     "    endpoint_name=online_endpoint_name,\n",
     "    deployment_name=deployment.name,\n",
     "    request_file=request_file_name,\n",
-    ")"
+    ")\n",
+    "predictions = json.loads(resp)\n",
+    "predictions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualize detections\n",
+    "### Visualize detections\n",
     "Now that we have scored a test image, we can visualize the bounding boxes for this image."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -1084,7 +1105,7 @@
     "\n",
     "IMAGE_SIZE = (18, 12)\n",
     "plt.figure(figsize=IMAGE_SIZE)\n",
-    "img_np = mpimg.imread(sample_image)\n",
+    "img_np = mpimg.imread(sample_images[0])\n",
     "img = Image.fromarray(img_np.astype(\"uint8\"), \"RGB\")\n",
     "x, y = img.size\n",
     "\n",
@@ -1092,7 +1113,7 @@
     "# Display the image\n",
     "ax.imshow(img_np)\n",
     "\n",
-    "prediction = json.loads(resp)[0]\n",
+    "prediction = predictions[0]\n",
     "label_index = np.argmax(prediction[\"probs\"])\n",
     "label = prediction[\"labels\"][label_index]\n",
     "conf_score = prediction[\"probs\"][label_index]\n",
@@ -1104,6 +1125,96 @@
     "plt.text(30, 30, display_text, color=color, fontsize=30)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate the Scores and Explanations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
+    "\n",
+    "# Define explainability (XAI) parameters\n",
+    "model_explainability = True\n",
+    "xai_parameters = {\"xai_algorithm\": \"guidedbackprop\", 'visualizations': True, 'attributions': False}\n",
+    "\n",
+    "request_json = {\n",
+    "    \n",
+    "    \"input_data\": {\n",
+    "        \"columns\": [\"image_details\"],\n",
+    "        \"data\": [[{'image': base64.encodebytes(read_image(img_path)).decode(\"utf-8\"),\n",
+    "                   \"model_explainability\": model_explainability,\n",
+    "                   'xai_parameters': xai_parameters}] for img_path in sample_images],\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "request_file_name = \"sample_request_data.json\"\n",
+    "\n",
+    "with open(request_file_name, \"w\") as request_file:\n",
+    "    json.dump(request_json, request_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "resp = ml_client.online_endpoints.invoke(\n",
+    "                                        endpoint_name=online_endpoint_name,\n",
+    "                                        deployment_name=deployment.name,\n",
+    "                                        request_file=request_file_name,\n",
+    "                                    )\n",
+    "predictions = json.loads(resp)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Explanations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "def base64_to_img(base64ImgString):\n",
+    "    base64Img = base64ImgString.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64Img)\n",
+    "    return BytesIO(decoded_img).getvalue()\n",
+    "\n",
+    "\n",
+    "# visualize explanations of the first image against one of the class\n",
+    "img = base64_to_img(predictions[0]['visualizations'])\n",
+    "image = Image.open(BytesIO(img))\n",
+    "image.show()"
    ]
   },
   {
@@ -1161,9 +1272,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3.10 - SDK V2",
+   "display_name": "Python [conda env:xaibenchmarks] *",
    "language": "python",
-   "name": "python310-sdkv2"
+   "name": "conda-env-xaibenchmarks-py"
   },
   "language_info": {
    "codemirror_mode": {
