--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multilabel-task-fridge-items/automl-image-classification-multilabel-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multilabel-task-fridge-items/automl-image-classification-multilabel-task-fridge-items-mlflow.ipynb
@@ -553,7 +553,7 @@
     ")\n",
     "\n",
     "image_classification_multilabel_job.set_sweep(\n",
-    "    max_trials=10,\n",
+    "    max_trials=1,\n",
     "    max_concurrent_trials=2,\n",
     "    sampling_algorithm=\"Random\",\n",
     "    early_termination=BanditPolicy(\n",
@@ -830,6 +830,7 @@
     "from azure.ai.ml.entities import (\n",
     "    ManagedOnlineEndpoint,\n",
     "    ManagedOnlineDeployment,\n",
+    "    OnlineRequestSettings,\n",
     "    Model,\n",
     "    Environment,\n",
     "    CodeConfiguration,\n",
@@ -929,12 +930,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "req_timeout = OnlineRequestSettings(request_timeout_ms=90000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "deployment = ManagedOnlineDeployment(\n",
     "    name=\"ic-ml-fridge-items-mlflow-dpl\",\n",
     "    endpoint_name=online_endpoint_name,\n",
     "    model=registered_model.id,\n",
     "    instance_type=\"Standard_DS3_V2\",\n",
     "    instance_count=1,\n",
+    "    request_settings=req_timeout,\n",
     "    liveness_probe=ProbeSettings(\n",
     "        failure_threshold=30,\n",
     "        success_threshold=1,\n",
@@ -996,6 +1007,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Online Inference"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1004,8 +1022,7 @@
     "# Create request json\n",
     "import base64\n",
     "\n",
-    "sample_image = \"./data/multilabelFridgeObjects/images/99.jpg\"\n",
-    "\n",
+    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
     "\n",
     "def read_image(image_path):\n",
     "    with open(image_path, \"rb\") as f:\n",
@@ -1014,8 +1031,8 @@
     "\n",
     "request_json = {\n",
     "    \"input_data\": {\n",
-    "        \"columns\": [\"image\"],\n",
-    "        \"data\": [base64.encodebytes(read_image(sample_image)).decode(\"utf-8\")],\n",
+    "        \"columns\": [\"image_details\"],\n",
+    "        \"data\": [[{'image': base64.encodebytes(read_image(img_path)).decode(\"utf-8\")}] for img_path in sample_images],\n",
     "    }\n",
     "}"
    ]
@@ -1044,21 +1061,25 @@
     "    endpoint_name=online_endpoint_name,\n",
     "    deployment_name=deployment.name,\n",
     "    request_file=request_file_name,\n",
-    ")"
+    ")\n",
+    "predictions = json.loads(resp)\n",
+    "predictions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualize detections\n",
+    "### Visualize detections\n",
     "Now that we have scored a test image, we can visualize the bounding boxes for this image."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -1070,15 +1091,14 @@
     "\n",
     "IMAGE_SIZE = (18, 12)\n",
     "plt.figure(figsize=IMAGE_SIZE)\n",
-    "img_np = mpimg.imread(sample_image)\n",
+    "img_np = mpimg.imread(sample_images[0])\n",
     "img = Image.fromarray(img_np.astype(\"uint8\"), \"RGB\")\n",
     "x, y = img.size\n",
     "\n",
     "fig, ax = plt.subplots(1, figsize=(15, 15))\n",
     "# Display the image\n",
     "ax.imshow(img_np)\n",
-    "prediction_list = json.loads(resp)\n",
-    "prediction = prediction_list[0]\n",
+    "prediction = predictions[0]\n",
     "score_threshold = 0.5\n",
     "\n",
     "label_offset_x = 30\n",
@@ -1093,6 +1113,90 @@
     "        plt.text(label_offset_x, label_offset_y, display_text, color=color, fontsize=30)\n",
     "        label_offset_y += 30\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate the Scores and Explanations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
+    "\n",
+    "# Define explainability (XAI) parameters\n",
+    "model_explainability = True\n",
+    "xai_parameters = {\"xai_algorithm\": \"guidedbackprop\", \"confidence_score_threshold_multilabel\": 0.8}\n",
+    "\n",
+    "request_json = {\n",
+    "    \n",
+    "    \"input_data\": {\n",
+    "        \"columns\": [\"image_details\"],\n",
+    "        \"data\": [[{'image': base64.encodebytes(read_image(img_path)).decode(\"utf-8\"), \"model_explainability\": model_explainability, 'xai_parameters': xai_parameters}] for img_path in sample_images],\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "request_file_name = \"sample_request_data.json\"\n",
+    "\n",
+    "with open(request_file_name, \"w\") as request_file:\n",
+    "    json.dump(request_json, request_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resp = ml_client.online_endpoints.invoke(\n",
+    "                                        endpoint_name=online_endpoint_name,\n",
+    "                                        deployment_name=deployment.name,\n",
+    "                                        request_file=request_file_name,\n",
+    "                                    )\n",
+    "predictions = json.loads(resp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Explanations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "def base64_to_img(base64ImgString):\n",
+    "    base64Img = base64ImgString.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64Img)\n",
+    "    return BytesIO(decoded_img).getvalue()\n",
+    "\n",
+    "# visualize explanations of the first image against one of the class\n",
+    "img = base64_to_img(predictions[0]['visualizations'][0])\n",
+    "image = Image.open(BytesIO(img))\n",
+    "image.show()"
    ]
   },
   {
@@ -1147,9 +1251,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3.10 - SDK V2",
+   "display_name": "Python [conda env:xaibenchmarks] *",
    "language": "python",
-   "name": "python310-sdkv2"
+   "name": "conda-env-xaibenchmarks-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1161,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.10"
   },
   "microsoft": {
    "host": {
