--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass-batch-scoring/auto-ml-image-classification-multiclass-batch-scoring.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass-batch-scoring/auto-ml-image-classification-multiclass-batch-scoring.ipynb
@@ -263,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Retrieving default datastore that got automatically created when we setup a workspace\n",
@@ -342,7 +344,7 @@
     "    training_data=training_dataset,\n",
     "    validation_data=validation_dataset,\n",
     "    hyperparameter_sampling=GridParameterSampling({\"model_name\": choice(\"vitb16r224\")}),\n",
-    "    iterations=1,\n",
+    "    iterations=1,    \n",
     ")"
    ]
   },
@@ -358,7 +360,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "automl_image_run.wait_for_completion(wait_post_processing=True)"
@@ -516,7 +520,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# View the batch scoring script. Use the model settings as appropriate for your model.\n",
@@ -538,7 +544,9 @@
     "### Create the parallel-run configuration to wrap the inference script\n",
     "Create the pipeline run configuration specifying the script, environment configuration, and parameters. Specify the compute target you already attached to your workspace as the target of execution of the script. This will set the run configuration of the ParallelRunStep we will define next.\n",
     "\n",
-    "Refer this [site](https://github.com/Azure/MachineLearningNotebooks/tree/master/how-to-use-azureml/machine-learning-pipelines/parallel-run) for more details on ParallelRunStep of Azure Machine Learning Pipelines."
+    "Refer this [site](https://github.com/Azure/MachineLearningNotebooks/tree/master/how-to-use-azureml/machine-learning-pipelines/parallel-run) for more details on ParallelRunStep of Azure Machine Learning Pipelines.\n",
+    "\n",
+    "`run_invocation_timeout` is 60 seconds by default, try to increase it for the cases where you want to generate **explanations** and or use large `mini_batch_size`"
    ]
   },
   {
@@ -555,11 +563,12 @@
     "    source_directory=\"scripts\",\n",
     "    output_action=\"append_row\",\n",
     "    append_row_file_name=\"parallel_run_step.txt\",\n",
-    "    mini_batch_size=\"20\",  # Num files to process in one call\n",
+    "    mini_batch_size=\"5\",  # Num files to process in one call\n",
     "    error_threshold=1,\n",
     "    compute_target=compute_target,\n",
     "    process_count_per_node=2,\n",
     "    node_count=1,\n",
+    "    run_invocation_timeout=60*10\n",
     ")"
    ]
   },
@@ -567,7 +576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create the pipeline step\n",
+    "### Create the pipeline step for scoring and generating explanations\n",
     "\n",
     "A pipeline step is an object that encapsulates everything you need for running a pipeline including:\n",
     "\n",
@@ -584,17 +593,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "To generate the explanations along with the scoring:\n",
+    "- Uncomment the `model_explainability` and `xai_parameters` arguments\n",
+    "- set `model_explainability` to True and provide extra explainability parameters `xai_parameters`\n",
+    "- make sure you increase the `run_invocation_timeout` whenever \n",
+    "    - you increase `mini_batch_size` or\n",
+    "    - if you encounter timeout issue during inference"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "import json\n",
     "from azureml.pipeline.steps import ParallelRunStep\n",
     "from datetime import datetime\n",
     "\n",
     "parallel_step_name = \"batchscoring-\" + datetime.now().strftime(\"%Y%m%d%H%M\")\n",
     "\n",
-    "arguments = [\"--model_name\", model_name]\n",
+    "arguments = [\"--model_name\", model_name,\n",
+    "#              \"--model_explainability\", True,\n",
+    "#              \"--xai_parameters\", json.dumps({\"xai_algorithm\": \"xrai\"})\n",
+    "            ]\n",
     "\n",
     "# Specify inference batch_size, otherwise uses default value. (This is different from the mini_batch_size above)\n",
     "# NOTE: Large batch sizes may result in OOM errors.\n",
@@ -656,7 +684,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Wait the run for completion and show output log to console\n",
@@ -673,7 +703,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import tempfile\n",
@@ -687,11 +719,13 @@
     "result_file = os.path.join(\n",
     "    target_dir, batch_output.path_on_datastore, parallel_run_config.append_row_file_name\n",
     ")\n",
-    "result_file\n",
     "\n",
-    "# Print the first five lines of the output\n",
+    "# Print the first two lines of the output\n",
+    "# don't print more than one line in case of Explainability \n",
+    "# as the image base64 string is quite large\n",
+    "no_lines_to_print = 2\n",
     "with open(result_file) as f:\n",
-    "    for x in range(5):\n",
+    "    for x in range(no_lines_to_print):\n",
     "        print(next(f))"
    ]
   },
@@ -742,7 +776,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -773,6 +809,35 @@
     "plt.text(30, 30, display_text, color=color, fontsize=30)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Choose a random file for visualizing explanations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import base64\n",
+    "from PIL import Image\n",
+    "from io import BytesIO\n",
+    "\n",
+    "\n",
+    "def base64_to_img(base64ImgString):\n",
+    "    base64Img = base64ImgString.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64Img)\n",
+    "    return BytesIO(decoded_img).getvalue()\n",
+    "\n",
+    "\n",
+    "img = base64_to_img(prediction['visualizations'])\n",
+    "image = Image.open(BytesIO(img))\n",
+    "image.show()"
    ]
   },
   {
@@ -922,9 +987,9 @@
    "tutorials"
   ],
   "kernelspec": {
-   "display_name": "Python 3.8 - AzureML",
+   "display_name": "Python [conda env:xaibenchmarks] *",
    "language": "python",
-   "name": "python38-azureml"
+   "name": "conda-env-xaibenchmarks-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -936,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   },
   "metadata": {
    "interpreter": {
