updating od output notebooks

--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass-batch-scoring/auto-ml-image-classification-multiclass-batch-scoring.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass-batch-scoring/auto-ml-image-classification-multiclass-batch-scoring.ipynb
@@ -815,7 +815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Choose a random file for visualizing explanations"
+    "### Choose a random file for visualizing explanations"
    ]
   },
   {
