minor changes in notebooks

--- a/python-sdk/tutorials/automl-with-azureml/image-instance-segmentation/auto-ml-image-instance-segmentation.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-instance-segmentation/auto-ml-image-instance-segmentation.ipynb
@@ -689,7 +689,8 @@
     "\n",
     "# Make the request and display the response\n",
     "resp = requests.post(scoring_uri, data, headers=headers)\n",
-    "print(resp.text)"
+    "predictions = json.loads(resp.text)\n",
+    "predictions"
    ]
   },
   {
@@ -726,9 +727,11 @@
    "outputs": [],
    "source": [
     "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
-    "json_data = json.dumps({'image': [img_to_base64(img_path) for img_path in sample_images]})\n",
+    "json_data = json.dumps(\n",
+    "    {\"image\": [img_to_base64(img_path) for img_path in sample_images]}\n",
+    ")\n",
     "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
-    "predictions = json.loads(\"[{}]\".format(resp.text.replace('}{', '},{')))\n",
+    "predictions = json.loads(\"[{}]\".format(resp.text.replace(\"}{\", \"},{\")))\n",
     "predictions"
    ]
   },
