--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multilabel/auto-ml-image-classification-multilabel.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multilabel/auto-ml-image-classification-multilabel.ipynb
@@ -798,9 +798,12 @@
    "outputs": [],
    "source": [
     "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
-    "json_data = json.dumps({'image': [img_to_base64(img_path) for img_path in sample_images]})\n",
+    "json_data = json.dumps(\n",
+    "    {\"image\": [img_to_base64(img_path) for img_path in sample_images]}\n",
+    ")\n",
     "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
-    "predictions = json.loads(\"[{}]\".format(resp.text.replace('}{', '},{')))\n",
+    "predictions = json.loads(\"[{}]\".format(resp.text.replace(\"}{\", \"},{\")))\n",
+    "\n",
     "predictions"
    ]
   },
