updating python version changes

--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass-batch-scoring/auto-ml-image-classification-multiclass-batch-scoring.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass-batch-scoring/auto-ml-image-classification-multiclass-batch-scoring.ipynb
@@ -546,7 +546,7 @@
     "\n",
     "Refer this [site](https://github.com/Azure/MachineLearningNotebooks/tree/master/how-to-use-azureml/machine-learning-pipelines/parallel-run) for more details on ParallelRunStep of Azure Machine Learning Pipelines.\n",
     "\n",
-    "`run_invocation_timeout` is 60 seconds by default, try to increase it for the cases where you want to generate **explanations** and or use large `mini_batch_size`"
+    "`run_invocation_timeout` is 60 seconds by default. Try to increase it for the cases where you want to generate **explanations** and/or use large `mini_batch_size`"
    ]
   },
   {
@@ -599,8 +599,8 @@
     "\n",
     "To generate the explanations along with the scoring:\n",
     "- Uncomment the `model_explainability` and `xai_parameters` arguments\n",
-    "- set `model_explainability` to True and provide extra explainability parameters `xai_parameters`\n",
-    "- make sure you increase the `run_invocation_timeout` whenever \n",
+    "- Set `model_explainability` to True and provide extra explainability parameters `xai_parameters`\n",
+    "- Make sure you increase the `run_invocation_timeout` whenever \n",
     "    - you increase `mini_batch_size` or\n",
     "    - if you encounter timeout issue during inference"
    ]
@@ -825,8 +825,8 @@
    "outputs": [],
    "source": [
     "import base64\n",
-    "from PIL import Image\n",
     "from io import BytesIO\n",
+    "from PIL import Image\n",
     "\n",
     "\n",
     "def base64_to_img(base64ImgString):\n",
@@ -987,9 +987,9 @@
    "tutorials"
   ],
   "kernelspec": {
-   "display_name": "Python [conda env:xaibenchmarks] *",
+   "display_name": "Python 3.8 - AzureML",
    "language": "python",
-   "name": "conda-env-xaibenchmarks-py"
+   "name": "python38-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1001,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   },
   "metadata": {
    "interpreter": {
