--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
@@ -903,9 +903,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:xaibenchmarks] *",
-   "language": "python",
-   "name": "conda-env-xaibenchmarks-py"
+    "display_name": "Python 3.8 - AzureML",
+    "language": "python",
+    "name": "python38-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -917,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
