--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
@@ -1272,9 +1272,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:xaibenchmarks] *",
-   "language": "python",
-   "name": "conda-env-xaibenchmarks-py"
+    "display_name": "Python 3.8 - AzureML",
+    "language": "python",
+    "name": "python38-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1286,7 +1286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   },
   "microsoft": {
    "host": {
