--- a/sdk/jobs/automl-standalone-jobs/automl-image-object-detection-task-fridge-items/automl-image-object-detection-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-object-detection-task-fridge-items/automl-image-object-detection-task-fridge-items-mlflow.ipynb
@@ -1351,9 +1351,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:xaibenchmarks] *",
+   "display_name": "Python 3.8 - AzureML",
    "language": "python",
-   "name": "conda-env-xaibenchmarks-py"
+   "name": "python38-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1365,7 +1365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   },
   "microsoft": {
    "host": {
